--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "random-words": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-youtube": "^7.12.0"
   },
