--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.6.0",
+    "node-sass": "^4.14.1",
     "random-words": "^1.1.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
